force-app/main/default/objects/ms_Marketing_Inventory__c/ms_Marketing_Inventory__c.object-meta.xml
<CustomObject>
    <label>Marketing Inventory</label>
    <nameField>
        <label>Marketing Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>