force-app/main/default/objects/ms_Marketing_Inventory__c/fields/Channel_Supplier_Title__c.field-meta.xml
<CustomField>
    <fullName>Channel_Supplier_Title__c</fullName>
    <formula>TEXT(ms_Channel__c) &amp; &quot;-&quot; &amp; TEXT(ms_Supplier__c)&amp; &quot;-&quot;+Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel &amp;Supplier &amp;Title</label>
    <type>Text</type>
</CustomField>