force-app/main/default/objects/ms_Marketing_Inventory__c/fields/ms_Available_Slots__c.field-meta.xml
<CustomField>
    <fullName>ms_Available_Slots__c</fullName>
    <label>Available Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>