force-app/main/default/objects/ms_Marketing_Inventory__c/fields/ms_Budget__c.field-meta.xml
<CustomField>
    <fullName>ms_Budget__c</fullName>
    <label>Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>