force-app/main/default/objects/ms_Marketing_Inventory__c/fields/ms_Consumed_Slots__c.field-meta.xml
<CustomField>
    <fullName>ms_Consumed_Slots__c</fullName>
    <label>Consumed Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>