force-app/main/default/objects/ms_Marketing_Inventory__c/fields/ms_Date__c.field-meta.xml
<CustomField>
    <fullName>ms_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>