force-app/main/default/objects/ms_Marketing_Inventory__c/fields/ms_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ms_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>