force-app/main/default/objects/ms_Marketing_Inventory__c/fields/ms_Marketing_Inventory__c.field-meta.xml
<CustomField>
    <fullName>ms_Marketing_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Inventory</label>
    <referenceTo>ms_Marketing_Inventory__c</referenceTo>
    <relationshipLabel>Marketing Inventories</relationshipLabel>
    <relationshipName>Marketing_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>