force-app/main/default/objects/ms_Marketing_Inventory__c/fields/ms_Placement__c.field-meta.xml
<CustomField>
    <fullName>ms_Placement__c</fullName>
    <label>Placement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EGN</fullName>
            </value>
            <value>
                <fullName>Escape</fullName>
            </value>
            <value>
                <fullName>Traveler</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Solus</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>