force-app/main/default/objects/ms_Marketing_Inventory__c/fields/ms_Recurring__c.field-meta.xml
<CustomField>
    <fullName>ms_Recurring__c</fullName>
    <label>Recurring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>