force-app/main/default/objects/ms_Marketing_Inventory__c/fields/ms_Spend__c.field-meta.xml
<CustomField>
    <fullName>ms_Spend__c</fullName>
    <label>Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>