force-app/main/default/objects/ms_Marketing_Inventory__c/fields/ms_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>ms_Start_Time__c</fullName>
    <defaultValue>TIMEVALUE(&quot;09:00:00.000&quot;)</defaultValue>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>