force-app/main/default/objects/ms_Marketing_Inventory__c/fields/ms_Supplier__c.field-meta.xml
<CustomField>
    <fullName>ms_Supplier__c</fullName>
    <label>Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Newscorp</fullName>
            </value>
            <value>
                <fullName>Nine</fullName>
            </value>
            <value>
                <fullName>TripaDeal</fullName>
            </value>
            <value>
                <fullName>IKTP</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Youtube</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>