force-app/main/default/objects/ms_Marketing_Inventory__c/fields/ms_TimeText__c.field-meta.xml
<CustomField>
    <fullName>ms_TimeText__c</fullName>
    <formula>TEXT( ms_Start_Time__c )</formula>
    <label>TimeText</label>
    <type>Text</type>
</CustomField>