force-app/main/default/objects/ms_Marketing_Inventory__c/fields/ms_Title__c.field-meta.xml
<CustomField>
    <fullName>ms_Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sunday Mail</fullName>
            </value>
            <value>
                <fullName>Sunday Telegraph</fullName>
            </value>
            <value>
                <fullName>Sunday Herald Sun</fullName>
            </value>
            <value>
                <fullName>Sydney Morning Herald</fullName>
            </value>
            <value>
                <fullName>The Age</fullName>
            </value>
            <value>
                <fullName>The Sunday Age</fullName>
            </value>
            <value>
                <fullName>4BC</fullName>
            </value>
            <value>
                <fullName>2GB</fullName>
            </value>
            <value>
                <fullName>3AW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>