force-app/main/default/objects/ms_Marketing_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ms_Title__c</columns>
    <columns>ms_Channel__c</columns>
    <columns>ms_Date__c</columns>
    <columns>ms_Placement__c</columns>
    <columns>ms_Supplier__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>