force-app/main/default/objects/ms_Marketing_Inventory__c/listViews/Social_Media.listView-meta.xml
<ListView>
    <fullName>Social_Media</fullName>
    <columns>NAME</columns>
    <columns>ms_Title__c</columns>
    <columns>ms_Channel__c</columns>
    <columns>ms_Date__c</columns>
    <columns>ms_Placement__c</columns>
    <columns>ms_Supplier__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ms_Channel__c</field>
        <operation>equals</operation>
        <value>Social</value>
    </filters>
    <label>Social Media</label>
</ListView>